...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#F5F5DC"
                android:title="Zdravi recepti"
                android:titleTextColor="#000000"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
...
